# todo-app-fastapi

./: LICENSE  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 53ee1da9e93b_update_tabel_todo.py  7c139683ccb2_init.py  872bad3ad644_fix_tabel_todo_and_relatinsip.py  90b55ef82501_create_user_tabel.py  d64c37f71555_update_tabel.py
app/auth/model/: auth_model.py
app/auth/route/: auth_route.py
app/auth/service/: auth_service.py
app/auth/uttil/: pass_hash.py
app/core/: config.py  db.py
app/todo/model/: todo_model.py
app/user/model/: user_model.py
app/user/route/: user_route.py
app/user/schema/: user_schema.py
app/user/service/: user_service.py
auth/model/: auth_model.py
auth/route/: auth_route.py
auth/service/: auth_service.py
core/: config.py  db.py  user_schema.py
docs/: migration.md
user/model/: user_model.py
user/route/: user_route.py
user/schema/: user_schema.py
user/service/: user_service.py
